# zits

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  test.d.ts
.github/workflows/: release.yml  test.yml
src/: casing.rs  holochain_imports.rs  lib.rs  parser.rs  typescript.rs  utils.rs  write_headers.rs  zome_proxy.rs
src/to_typescript/: consts.rs  enums.rs  fns.rs  mod.rs  structs.rs  type_item.rs
test/: test_all.bat  test_all.sh
test/const/: input.rs  output.proxy.ts  output.types.ts  rust.rs  typescript.ts
test/directory_input/: typescript.d.ts
test/directory_input/directory/: 1_book.rs  2_chapter.rs  3_utc.rs  not a rust file.txt
test/enum/: input.rs  output.integrity.ts  output.proxy.ts  output.types.ts  rust.rs  test.proxy.ts  test.types.ts
test/fn/: input.rs  output.fn.ts  output.proxy.ts  output.types.ts  rust.rs  test.fn.ts  test.proxy.ts  test.types.ts
test/proxy/: input.rs  output.integrity.ts  output.proxy.ts  output.types.ts
test/proxy-no-types/: input.rs  output.proxy.ts  output.types.ts
test/struct/: input.rs  output.proxy.ts  output.types.ts  rust.rs  test.proxy.ts  test.types.ts  tsync.bat
test/type/: input.rs  output.proxy.ts  output.types.ts  rust.rs  test.proxy.ts  test.types.ts
tsync-macro/: Cargo.toml
tsync-macro/src/: lib.rs
