[package]
name = "ztsync"
description = "Generate typescript types from zome code."
version = "1.6.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["typescript", "types", "generation", "macro"]
categories = ["command-line-utilities", "development-tools", "development-tools::ffi", "web-programming"]
edition = "2021"
rust-version = "1.65.0"

[dependencies]
structopt = "0.3.22"
syn = { version = "1.0.75", features = ["full", "extra-traits"] }
walkdir = "2.3.2"
#ztsync-macro = "0.1.0"
convert_case = "0.6.0"

[lib]
name = "ztsync"
path = "src/lib.rs"

[[bin]]
name = "ztsync"
test = false
path = "bin/main.rs"
