[package]
name = "zits"
description = "Generate typescript bindings for zome code in Rust."
version = "1.17.1"
edition = "2021"
rust-version = "1.75.0"
repository = "https://github.com/ddd-mtl/zits/"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["typescript", "types", "generation", "holochain"]
categories = ["command-line-utilities", "development-tools", "development-tools::ffi"]
exclude = ["test/*"]

[dependencies]
structopt = "0.3.22"
quote = "=1.0.24"
syn = { version = "1.0.75", features = ["full", "extra-traits"] }
walkdir = "2.3.2"
convert_case = "0.6.0"

[lib]
name = "zits"
path = "src/lib.rs"

[[bin]]
name = "zits"
test = false
path = "bin/main.rs"
